# TrackTacular

./: .gitignore  pyproject.toml  训练流程注释总结.md
WorldTrack/: world_track.py
WorldTrack/configs/: d_wildtrack.yml  m_liftnet.yml  t_fit.yml
WorldTrack/datasets/: pedestrian_datamodule.py  pedestrian_dataset.py  wildtrack_dataset.py
WorldTrack/models/: liftnet.py  loss.py
